adds more details